tests/invalid/01_function.cps
function f(a: integer): integer { return a; }
let x = f();        // E021
let y = f("hola");  // E022
